# odoo_18_custom_projects

./: .gitignore  Northwind.mdb  README.md  northwind.mdb  test.mdb
Bashraheel/: README.md  requirements.txt
Bashraheel/bashraheel_fastapi/: __manifest__.py
Bashraheel/bashraheel_invoice_integration/: API_README.md  __manifest__.py
Bashraheel/simple_api/: __manifest__.py
Bashraheel/upward_bashraheel_fastapi/: __manifest__.py
OCA/server-auth/: .copier-answers.yml  README.md
OCA/web-api/: .copier-answers.yml  README.md
OCA/web-api/setup/_metapackage/: pyproject.toml
Plan_b_Project/pos_tamara_payment/: __manifest__.py
Plan_b_Project/tamara_payment_connector/: __init__.py  __manifest__.py
one_drive_integration_project/onedrive_integration_odoo/: __manifest__.py  hooks.py
onedrive_project/: README_HANDOVER.md  azure  test_sync_burst.py
onedrive_project/onedrive_integration_odoo/: __manifest__.py
payment_reminder/: README.md  __manifest__.py
payment_reminder/config/: payment_reminder.conf
payment_reminder/controllers/: __init__.py  payment_reminder_api.py  payment_reminder_client_banner.py
payment_reminder/data/: payment_reminder_cron.xml  payment_reminder_data.xml  payment_reminder_templates.xml
payment_reminder/docs/: USAGE.md
payment_reminder/models/: __init__.py  payment_reminder_client.py  payment_reminder_settings.py  payment_reminder_template.py
payment_reminder/security/: ir.model.access.csv  payment_reminder_security.xml
payment_reminder/views/: payment_reminder_client_views.xml  payment_reminder_menu.xml  (+2 more)
(+110 files in other folders)
