[project]
name = "odoo-addons-oca-web-api"
version = "18.0.20250821.0"
dependencies = [
    "odoo-addon-endpoint==18.0.*",
    "odoo-addon-endpoint_auth_api_key==18.0.*",
    "odoo-addon-endpoint_cache==18.0.*",
    "odoo-addon-endpoint_cache_preheat==18.0.*",
    "odoo-addon-endpoint_jsonifier==18.0.*",
    "odoo-addon-endpoint_route_handler==18.0.*",
    "odoo-addon-webservice==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
